# MSPro-Ltd-Corp-1.0

./: .gitattributes  .gitignore  README.md  build_msi_done.txt  exe_ver.txt  installed_state.txt  package.json  pnpm-lock.yaml
.github/workflows/: tauri-release.yml
docs/: CEO-BRAIN-v1.0.30-UNIFIED-PLAN.md
docs/phase-1/: README.md  phase-1-backlog.md  phase-1-claude-cli-driver-IMPL-REFERENCE.md  phase-1-current-db-schema.sql  phase-1-definition-of-done.md  phase-1-external-gateway-driver-IMPL-REFERENCE.md  phase-1-pal-trait-spec.md  phase-1-qwen-http-driver-IMPL-REFERENCE.md  phase-1-risk-register.md  phase-1-ui-design-language-reference.md  phase-1-ui-wireframes-spec.md
docs/prompts/: genidir-agentpod-program-dec-001-004.md
mspro-mcp/: README.md  server.py  smoke_test.py
scripts/: _health_check.py  sync-version.mjs  verify_gateway.py
scripts/smoke/: proof_run_logs.py  zahodA_proof.txt  zahodB_proof.txt
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/helpers/rollback-helper/: Cargo.toml
src-tauri/helpers/rollback-helper/src/: main.rs
src-tauri/migrations/: 01_init.sql  02_chat_messages.sql  03_hmt_engine.sql  04_fix_empty_slug.sql  05_post_knowledge.sql  06_dispatcher_hub.sql  07_vault_ops_log.sql  08_provider_registry_run_logs.sql  09_dispatcher_raw_brain.sql  10_chat_messages_spawned_task_id.sql  11_org_structure.sql  12_cancelled_status.sql  13_agent_card.sql  14_org_slugs.sql
src-tauri/resources/hmt/: 00-INDEX.md  01-оргсхема-8-отделений.md  02-цкп.md  03-обязанности-владельца.md  04-обязанности-руководителя.md  05-статистики.md  06-формулы-состояний.md  07-координация.md  08-стратегическое-планирование.md  09-финансовое-планирование.md
src-tauri/src/: context_assembler.rs  lib.rs  main.rs  org_tree.rs  outbox.rs  run_logger.rs  vault.rs  vault_ops.rs
src-tauri/src/com_server/: dispatch.rs  mod.rs  registry.rs
src-tauri/src/commands/: agent_card.rs  artifacts.rs  chat.rs  claude_bridge.rs  dispatcher.rs  dispatcher_brain.rs  dispatcher_tools.rs  executor_resolver.rs  hermes_bridge.rs  hmt.rs  mod.rs  org_chart.rs  ping.rs  post_executor.rs  posts.rs  qwen_bridge.rs  tool_calls.rs  vault.rs  vault_io.rs  verdict_parser.rs
src-tauri/src/db/: mod.rs  pool.rs
src-tauri/src/external_agent/: auth.rs  gateway.rs  handlers.rs  mod.rs  sql_validator.rs
src-tauri/src/pal/: claude_cli_driver.rs  external_gateway_driver.rs  mod.rs  orchestrator.rs  qwen_http_driver.rs
src-tauri/src/secrets/: dpapi.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/updater/: backup.rs  check.rs  mod.rs  rollback.rs
src/components/: Sidebar.tsx
src/components/chat/: AttachmentButtons.tsx  AttachmentsArea.tsx  BrainStatusBadges.tsx  ChatTaskArtifacts.tsx  HermesStatusBadge.tsx  MessageActions.tsx  MessageHoverActions.tsx  VaultSaveModal.tsx
src/components/common/: FileActions.tsx  Toast.tsx
src/components/dispatcher/: ArtifactsPanel.tsx  ChainView.tsx  PayloadViewer.tsx  TaskRow.tsx
src/components/home/: AddPostModal.tsx  AddStatisticModal.tsx  ConditionBadge.tsx  DepartmentCard.tsx  EditPostKnowledgeModal.tsx  Sparkline.tsx
src/components/org/: AgentCardEditor.tsx
src/components/settings/: BrainSettings.tsx  ExternalAgentGateway.tsx  UpdateRollback.tsx  VaultPreview.tsx
src/components/vault/: AddSecretModal.tsx
src/components/views/: CeoChat.tsx  Dispatcher.tsx  Home.tsx  OrgStructure.tsx  SecurityVault.tsx  Settings.tsx
src/lib/: attachments.ts
src/types/: hmt.ts
