[package]
name = "mspro-ltd-corp"
version = "1.0.14"
description = "MSPro-Ltd Corp — Hubbard-based AI company OS"
authors = ["Бровяков В.А."]
edition = "2021"

[lib]
# `_lib` suffix avoids name conflict with bin on Windows.
name = "mspro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

# Step 2 — Update/Rollback + External Agent Gateway
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time", "io-util", "net"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
http = "1"
getrandom = "0.2"
base64 = "0.22"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }

# Step 3 — Posts CRUD + CEO chat + sql/query RPC
regex = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Windows-only: secure secret storage backed by DPAPI / Credential Manager.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
