[package]
name = "mspro-ltd-corp"
version = "1.0.40"
description = "MSPro-Ltd Corp — Hubbard-based AI company OS"
authors = ["Бровяков В.А."]
edition = "2021"

[lib]
# `_lib` suffix avoids name conflict with bin on Windows.
name = "mspro_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
# v1.0.31: single-instance guard — второй запуск фокусирует существующее окно,
# а не плодит дубль (дубль давал спурьёзную ошибку миграций sqlx).
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
# Phase 1 (Iteration B): PAL — типизированные ошибки + async trait objects.
thiserror = "2"
async-trait = "0.1"

# Step 2 — Update/Rollback + External Agent Gateway
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "process", "time", "io-util", "net"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
http = "1"
getrandom = "0.2"
base64 = "0.22"
sysinfo = "0.32"
chrono = { version = "0.4", features = ["serde"] }

# Step 3 — Posts CRUD + CEO chat + sql/query RPC
regex = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Step 10 — Qwen 3 local HTTP bridge (OpenAI-compatible streaming)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dirs = "5"
sha2 = "0.10"

# Windows-only: secure secret storage backed by DPAPI / Credential Manager.
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
# v1.0.24 Phase 11B: Win32 Job Object — гарантированный kill всех child claude.exe
# при выходе MSPro (включая crash). Без этого — orphan процессы накапливаются.
win32job = "2"
# v1.0.27 Phase 11D: COM Server (Out-of-Process Local) — MSProLtdCorp.Application
# для Dispatch из Python/VBA/PowerShell. См. план Фазы 11D.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
] }
# windows-implement crate выделен отдельно (не feature в windows 0.61+)
windows-implement = "0.60"
windows-core = "0.61"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
