[package]
name = "mspro-rollback-helper"
version = "1.0.0"
edition = "2021"
description = "Out-of-process helper that swaps the main MSPro-Ltd Corp exe for a backup after the parent process exits."

[[bin]]
name = "mspro-rollback-helper"
path = "src/main.rs"

[dependencies]
log = "0.4"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
